<?xml version="1.0"?>
<package format="2">
  <name>voxgraph</name>
  <version>1.0.0</version>
  <description>Pose graph optimization of voxblox submaps</description>

  <maintainer email="victorr@ethz.ch">Victor Reijgwart</maintainer>

  <author>Victor Reijgwart</author>

  <license>ASL 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>voxblox</depend>
  <depend>voxblox_ros</depend>
  <depend>cblox</depend>
  <depend>cblox_ros</depend>
  <depend>ceres_catkin</depend>
  <depend>eigen_catkin</depend>

  <depend>voxblox_msgs</depend>
  <depend>cblox_msgs</depend>
  <depend>voxgraph_msgs</depend>
</package>

